Switch to URI parse for STATSD_URL